# sd-2017-3d-scanner

./: README.md  backup_rpi_m542_driver_control.py  index.html  relativeStepperLocation.txt  rpi_m542_driver_control.py  scpRPi.sh  sshRPi.sh  styles.css  test2_stepper.py  test_stepper.py
3DScanner/: CMakeLists.txt  karlScan.cpp  karlScan2.cpp  scan.sh
ArduinoMotorSlave/: ArduinoMotorSlave.ino
GUI/: motorDemo.py  motorGUI.py
GUI_MacOS/: motorGUI_OLD.py
RPi_code/: motorServer.py
RPi_code/stepperMotor/: stepperMotor.py
RPi_code/stepperMotor/old_code/: rpi_m542_driver_control.py  test2_stepper.py
arduino/SerialCommTest/: SerialCommTest.ino
arduino/servoGearbox/SerialPythonSlaveGearbox/: SerialPythonSlaveGearbox.ino
greedyScan/: greedyScan.py  greedyScan1.py  motorServerClientSocket.py
linearActuators/: actuator1.py  servo.py
motorGUI/: motorDemo.py  motorGUI.py  motorServerClientSocket.py
serialCommunication/: serialGearboxMaster.py  serialMaster.py
stepperMotor/: rpi_m542_driver_control.py  test2_stepper.py
testCode/arduino/SerialCommTest/: SerialCommTest.ino
testCode/arduino/actuator/actuatorTest1/: actuatorTest1.ino
testCode/arduino/servoGearbox/SerialPythonSlaveGearbox/: SerialPythonSlaveGearbox.ino
testCode/arduino/servoGearbox/gearboxRange/: gearboxRange.ino
